Display Scheduler: Don't request BeginFrames while waiting for a root surface

When the root surface changes, we cannot draw to the display until a surface
activates. This CL stops draws (and BeginFrames) until activation. If a root surface is never
submitted then the display will not listen for BeginFrames.

Bug: 821940
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: I749c0ca8e85a3dbc7eccaa0799add81afb15beb9
Reviewed-on: https://chromium-review.googlesource.com/964595
Reviewed-by: Eric Seckler <eseckler@chromium.org>
Commit-Queue: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543548}
Former-commit-id: cfb855831a545f535565625209fe437017e05525